# a2a-mcp-demo

./: .env.example  README.md  pyproject.toml
agents/arithmetic_agent/: __main__.py  agent.py  agent_executor.py  description.txt  instruction.txt
agents/arithmetic_agent/mcp/: mcp_config.json
agents/host_agent/: agent.py  agent_executor.py
agents/website_builder_simple/: agent.py  agent_executor.py
app/cmd/: cmd.py
mcp/servers/arithmetic_server/: arithmetic_server.py
utilities/a2a/: agent_connect.py  agent_registry.json
utilities/common/: network_logger.py
utilities/mcp/: mcp_config.json
