[project]
name = "a2a-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.15",
    "asyncclick>=8.1.8",
    "google-adk>=1.7.0",
    "graphviz>=0.21",
    "litellm>=1.83.3",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.12.0",
    "networkx>=3.6.1",
]
